Added run instructions to README.md